# spatterlight

./: .gdb_history  .gitignore  ACCESSIBILITY.md  CHANGELOG.md  PRIVACY.md  README.md  Spatterlight.entitlements  Spatterlight.xctestplan  TROUBLESHOOTING.md  glk_dummy_defs.h  libunp64.entitlements
BlorbFramework/: Blorb.h  Blorb.m  BlorbFramework.h  BlorbResource.h  BlorbResource.swift  iff.c
Frameworks/: libFLAC.8.dylib  libSDL-1.2.0.dylib  libSDL_mixer-1.2.0.dylib  libSDL_sound-1.0.1.0.2.dylib  libmikmod.3.dylib  libogg.0.dylib  libsmpeg-0.4.0.dylib  libvorbis.0.dylib  libvorbisfile.3.dylib
SFBAudioEngine/: .gitignore  AudioBufferList.h  AudioChannelLayout.cpp  AudioChannelLayout.h  AudioConverter.cpp  AudioFormat.cpp  AudioFormat.h  AudioRingBuffer.h  CreateDisplayNameForURL.cpp  SFBAudioEngine.h  SFBReplayGainAnalyzer.h  SFBReplayGainAnalyzer.mm  Semaphore.cpp
SFBAudioEngine/Libraries/libtimidity/: CHANGES  INSTALL  configure.ac
SFBAudioEngine/Libraries/libtimidity/m4/: ao.m4
SFBAudioEngine/Libraries/libtimidity/src/: Makefile.am  Makefile.amigaos  Makefile.darwin  Makefile.os2  Makefile.w32  common.c  common.h  instrum.c  playmidi.c  readmidi.c  resample.c  stream.c  tables.c  timidity.c  timidity_internal.h
SFBAudioEngine/Libraries/libtimidity/src/XCode/: Info.plist  InfoPlist.strings
SFBAudioEngine/Libraries/libtimidity/src/XCode/timidity.xcodeproj/: project.pbxproj
SFBAudioEngine/Libraries/libtimidity/src/XCode/timidity.xcodeproj/xcshareddata/xcschemes/: timidity.xcscheme
Spatterlight.xcdatamodeld/: .xccurrentversion
Spatterlight.xcodeproj/: pettersjolund.mode1v3  pettersjolund.pbxuser  project.pbxproj  tor.mode1  tor.mode2  tor.mode2v3  tor.pbxuser  tor.perspective
SpatterlightMetadataImporter/: IndexRequestHandler.h  IndexRequestHandler.m  Info.plist
SpatterlightQuickLook/: Info.plist  InfoView.h  InfoView.m  NonInterpolatedImage.h  NonInterpolatedImage.m  PreviewViewController.h  PreviewViewController.m  SpatterlightQuickLook.entitlements
SpatterlightTests/: AppSupportDirTests.m  GameImportTests.m  GeasRegressionTests.mm  SpatterlightTests.m
SpatterlightThumbnailer/: Info.plist  ThumbnailProvider.h  ThumbnailProvider.m
Tests/: Tests.m
Treaty of Babel/: IFBibliographic.h  IFBibliographic.m  IFCoverDescription.h  IFCoverDescription.m  IFDB.h  IFDB.m  IFDBDownloader.h  IFDBDownloader.m  IFIdentification.h  IFIdentification.m  IFStory.h  IFStory.m  IFZoomID.h  IFZoomID.m  IFictionMetadata.h  IFictionMetadata.m  IfdbDownloader.h  IfdbDownloader.m
UITests/: Info.plist  UITests.m
application/: AppDelegate.h  AppDelegate.m  BureaucracyForm.h  BureaucracyForm.m  Channel-Cocoa.h  Channel-Cocoa.m  CommandScriptHandler.h  CommandScriptHandler.m  Compatibility.h  Compatibility.m  Constants.h  CoreDataManager.h  CoreDataManager.m  CoverImageHandler.h  CoverImageHandler.m  CoverImageView.h  CoverImageView.m  DummyController.h  DummyController.m  FileSignature.h  FileSignature.m  FolderAccess.h  FolderAccess.m  GlkController.h  GlkController.m  GlkEvent.h  GlkEvent.m  GlkGraphicsWindow kopia.m  GlkGraphicsWindow.h  GlkGraphicsWindow.m  GlkHyperlink.h  GlkHyperlink.m  GlkSoundChannel.h  GlkSoundChannel.m  GlkStyle.h  GlkStyle.m  GlkTextBufferWindow.h  GlkTextBufferWindow.m  GlkTextGridWindow.h  GlkTextGridWindow.m  (+66 more)
babel/: MANIFEST  README  README.md  adrift.c  advsys.c  agt.c  alan.c  archetype.c  babel.c  babel.h  babel_handler.c  babel_handler.h  babel_ifiction_functions.c  babel_multi_functions.c  babel_rev7.txt  babel_story_functions.c  blorb.c  comprehend.c  executable.c  glulx.c  html.c  hugo.c  ifiction.c  ifiction.h  jacl.c  level9.c  magscrolls.c  makefile  misc.c  modules.h  quest4.c  quest5.c  quill.c  register.c  register_ifiction.c  sagaplus.c  scott.c  tads.c  tads.h  tads2.c  (+6 more)
coredata/: AttributeDictionaryTransformer.h  AttributeDictionaryTransformer.m  ColorTransformer.h  ColorTransformer.m  CoreDataManager.h  CoreDataManager.m  Fetches.h  Fetches.m  Font.h  Font.m  Game+CoreDataClass.m  Game+CoreDataProperties.h  Game+CoreDataProperties.m  Game.h  Tag.h  (+25 more)
(+4121 files in other folders)
